# COMP558-Inpainting

./: .gitignore  Explanation  README.md  main.py  pyproject.toml  torchvision-0.20.1-cp312-cp312-macosx_11_0_arm64.whl
documents/: report.md
plots/: README.md
plots/old/: summary_table.tex
src/: settings.py
src/algorithms/: __init__.py  base.py
src/algorithms/classical/: __init__.py  efros_leung.py  navier_stokes.py  patch_match.py  texture_synthesis.py
src/algorithms/deep_learning/: __init__.py  dl.py  lama.py  lcm.py  stable_diffusion.py
src/datasets/: images.py  masks.py  utils.py
src/experiments/: base.py  benchmark.py  comparison.py  texture_synthesis.py
src/experiments/utils/: benchmark.py  datasets.py  metrics.py  visualization.py
src/utils/: logging.py  visualization.py
