[project]
name = "comp558-inpainting"
version = "0.1.0"
description = "COMP558 final project on image inpainting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "diffusers>=0.31.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-image>=0.24.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
]

[tool.uv]
dev-dependencies = ["black>=24.10.0", "pytest>=8.3.3", "ruff>=0.7.3"]
